# tempo-worker-k8s-operator

./: .charm_tracing_buffer.raw  .gitignore  Makefile  README.md  SECURITY.md  charmcraft.yaml  config.yaml  dev-release.sh  metadata.yaml  pyproject.toml  requirements.txt  tox.ini
.cover/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6_charm_py.html
.github/: .jira_sync_config.yaml
.github/workflows/: issues.yaml  pull-request.yaml  release.yaml
lib/charms/tempo_coordinator_k8s/v0/: charm_tracing.py
lib/charms/tempo_k8s/v1/: charm_tracing.py
src/: charm.py  mimir_cluster.py  tempo.py  tempo_cluster.py
src/UNKNOWN.egg-info/: SOURCES.txt  top_level.txt
terraform/: README.md  main.tf  outputs.tf  variables.tf
tests/integration/: conftest.py  helpers.py  test_charm.py  test_coordinator_relation.py  test_deploy.py  test_dummy.py  workload.py
tests/interface/: conftest.py  test_tempo_cluster.py
tests/scenario/: conftest.py  helpers.py  test_deploy.py  test_loki_integration.py  test_status.py
tests/unit/: conftest.py  helpers.py  test_charm.py  test_deploy.py  test_status.py
